# photosort

./: README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
data/test-photos/: README.md
src/photosort/: __init__.py  __main__.py  cli.py  photosort.py
tests/: test_photosort.py
